--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -1,15 +1,10 @@
-@use 'sass:color';
+@use "sass:color";
 
-@use '@material/theme/color-palette';
+@use "@material/theme/color-palette";
 
 // Svelte Colors!
-@use '@material/theme/index' as theme with (
-  $primary: #ff3e00,
-  $secondary: #676778,
-  $surface: #fff,
-  $background: #fff,
-  $error: color-palette.$red-900,
-);
+@use "@material/theme/index" as theme with
+  ($primary: #ff3e00, $secondary: #676778, $surface: #fff, $background: #fff, $error: color-palette.$red-900);
 
 html,
 body {
@@ -18,8 +13,23 @@ body {
 }
 
 a {
-  color: #40b3ff;
+  color: white;
+  font-size: 2em;
+  margin-right: 10px;
+  padding: 10px;
 }
-a:visited {
-  color: color.scale(#40b3ff, $lightness: -35%);
+a:hover {
+  color: cyan;
+  text-decoration: underline;
+  text-decoration-thickness: 5px;
+}
+a:active {
+  color: black;
+  background-color: white;
+  text-decoration: underline;
+  text-decoration-thickness: 5px;
+}
+
+nav > * {
+  text-decoration: none;
 }
