--- a/src/theme/dark/_smui-theme.scss
+++ b/src/theme/dark/_smui-theme.scss
@@ -1,15 +1,16 @@
-@use 'sass:color';
+@use "sass:color";
 
-@use '@material/theme/color-palette';
+@use "@material/theme/color-palette";
 
 // Svelte Colors! (Dark Theme)
-@use '@material/theme/index' as theme with (
-  $primary: #ff3e00,
-  $secondary: color.scale(#676778, $whiteness: -10%),
-  $surface: color.adjust(color-palette.$grey-900, $blue: +4),
-  $background: #000,
-  $error: color-palette.$red-700
-);
+@use "@material/theme/index" as theme with
+  (
+    $primary: #ff3e00,
+    $secondary: color.scale(#676778, $whiteness: -10%),
+    $surface: color.adjust(color-palette.$grey-900, $blue: +4),
+    $background: #000,
+    $error: color-palette.$red-700
+  );
 
 html,
 body {
@@ -18,8 +19,23 @@ body {
 }
 
 a {
-  color: #40b3ff;
+  color: white;
+  font-size: 2em;
+  margin-right: 10px;
+  padding: 10px;
 }
-a:visited {
-  color: color.scale(#40b3ff, $lightness: -35%);
+a:hover {
+  color: cyan;
+  text-decoration: underline;
+  text-decoration-thickness: 5px;
+}
+a:active {
+  color: black;
+  background-color: white;
+  text-decoration: underline;
+  text-decoration-thickness: 5px;
+}
+
+nav > * {
+  text-decoration: none;
 }
