--- a/src/theme/dark/_smui-theme.scss
+++ b/src/theme/dark/_smui-theme.scss
@@ -12,10 +12,15 @@
     $error: color-palette.$red-700
   );
 
+  $gradient: linear-gradient(0.25turn, #e66465, #9198e5);
+
 html,
 body {
-  background-color: #000;
-  color: theme.$on-surface;
+  font-family: Helvetica, sans-serif;
+  background: linear-gradient(0.25turn, #e66465, #9198e5);
+  // background-color: theme.$surface; 
+  // color: theme.$on-surface;
+  color: white;
 }
 
 a {
